20260206 last